Fix offcanvas and footer overlap

--- a/ClientApp/src/components/Footer.scss
+++ b/ClientApp/src/components/Footer.scss
@@ -42,6 +42,12 @@
     }
 }
 
+@media (max-width: 1520px) {
+    .bg-overlap {
+        display: none !important;
+    }
+  }
+
 @media (max-width: 768px) {
     .row>* {
         padding-left: 0 !important;
