--- a/ClientApp/src/components/NavMenu/NavMenu.scss
+++ b/ClientApp/src/components/NavMenu/NavMenu.scss
@@ -12,7 +12,6 @@
 }
 
 .hamburger-container {
-  transition: 750ms;
   height: 100vh !important;
   width: 6.5rem;
   justify-content: flex-start;
